# Falcon

./: .gitignore  FALCON_PLAN.md  PLAN.md  plan.md  requirements.txt
backend/: .env.example  config.py  db.py  main.py  pyproject.toml
backend/agents/: analysis.md  qa.md  writing.md
backend/app/: config.py  database.py  main.py  models.py
backend/app/db/migrations/: 001_initial.sql
backend/app/pipeline/: agents_md.py  analyzer.py  indexer.py  orchestrator.py  prompts.py  writer.py
backend/app/queue/: event_bus.py  job_queue.py
backend/app/routers/: chat.py  health.py  wikis.py
backend/app/sandbox/: codex.py  manager.py
backend/app/services/: chat_service.py  github_service.py  wiki_service.py
backend/routers/: repos.py
backend/schemas/: analysis_plan.json  manifest.json
backend/services/: agent.py  ingestion.py
backend/tests/: test_health.py
backend/tools/: definitions.py  shell.py
